--- a/css/index.scss
+++ b/css/index.scss
@@ -54,7 +54,7 @@ nav {
 				padding: 0.5rem;
 
 				&:hover {
-					background-color: #f6be47;
+					background-color: #ffbc0d;
 				}
 
 				span {
@@ -64,7 +64,7 @@ nav {
 		}
 
 		> li:hover {
-			border-top: 3px solid #f6be47;
+			border-top: 3px solid #ffbc0d;
 
 			> ul {
 				display: flex;
@@ -126,7 +126,7 @@ main#mc-home {
 				display: flex;
 				flex-direction: column;
 				gap: 1rem;
-				
+
 				> div {
 					display: flex;
 					flex-direction: column;
@@ -223,10 +223,11 @@ footer {
 
 .btn {
 	padding: 0.5em 1em;
-	background-color: #f6be47;
+	background-color: #ffbc0d;
 	border-radius: 0.2em;
 	color: #000;
 	text-decoration: none;
+	display: block;
 }
 
 h1 {
